feat: add head and title to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>  
+        This is a description of the website.
+        <title> 
+            Srinithi's Personal Website
+        </title>
+
+    </head>
   <body>
     Hello World! This is my website.
   </body>
