feat: add main tag to all .html

--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title> 
-            Srinithi's Personal Blog
-        </title>
-
+        <title> Srinithi's Personal Blog </title>
     </head>
   <body>
+    <main> </main>
     Welcome to my Blog.
   </body>
 </html>
