--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title> 
-            Srinithi's Contact Information
-        </title>
-
+        <title> Srinithi's Contact Information </title>
     </head>
   <body>
+    <main> </main>
     Below is my contact information:
      Phone: 9259676996
      Email: d.srinithi@gmail.com
