--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title> 
-            Srinithi's Personal Website
-        </title>
-
+        <title> Srinithi's Personal Website </title>
     </head>
   <body>
+    <main>  </main>
     Hello World! This is my website.
   </body>
 </html>
