--- a/resume.html
+++ b/resume.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title> 
-            Srinithi's Resume
-        </title>
-
+        <title> Srinithi's Resume </title>
     </head>
   <body>
+     <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
     Below is my resume. Conatact me if you have any questions or opportunities!
   </body>
 </html>
