feat: add nav and footer tag to all .html

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
         <title> Srinithi's Personal Blog </title>
     </head>
   <body>
-    <main> </main>
-    Welcome to my Blog.
+    <nav> </nav>
+    <main> Welcome to my Blog! </main>
+    <footer> © 2023 Srinithi's Personal Website> | All Rights Reserved </footer>
   </body>
 </html>
