--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,12 @@
         <title> Srinithi's Contact Information </title>
     </head>
   <body>
-    <main> </main>
+    <nav> </nav>
+    <main> 
     Below is my contact information:
      Phone: 9259676996
      Email: d.srinithi@gmail.com
+     </main>
+     <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
