--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title> Srinithi's Personal Website </title>
     </head>
   <body>
-    <main>  </main>
-    Hello World! This is my website.
+    <nav> </nav>
+    <main> 
+      Hello World! This is my website.
+    </main>
+    <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
