--- a/resume.html
+++ b/resume.html
@@ -4,13 +4,15 @@
         <title> Srinithi's Resume </title>
     </head>
   <body>
+    <nav> </nav>
      <main>
+        Below is my resume. Conatact me if you have any questions or opportunities!
       <section></section>
       <section></section>
       <section></section>
       <section></section>
       <section></section>
     </main>
-    Below is my resume. Conatact me if you have any questions or opportunities!
+    <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
