--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
   <body>
     <nav> </nav>
     <main> 
-    Below is my contact information:
-     Phone: 9259676996
-     Email: d.srinithi@gmail.com
+    <p> Below is my contact information: </p>
+     <p> <strong> Phone: </strong> 9259676996 </p>
+     <p> <strong> Email: </strong> d.srinithi@gmail.com </p>
      </main>
      <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
