--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <body>
     <nav> </nav>
     <main> 
-      Hello World! This is my website.
+      Hello World & welcome to my personal website! My name is <strong> Srinithi Doddapaneni </strong> and I am a first year <em> Computer Science </em> major 
+      <br> I'm from the Bay Area, specifically <em> San Ramon </em>. I love hiking, playing basketball for fun, spending time in nature, listening to music, playing chess, and solving puzzles.
+      One fun fact about me is that I've kept every single <br> letter written to me since 1st grade.
+      <p> I am excited for this opportunity with Hack4Impact and build projects to make a positive impact 
+        for nonprofits in SLO. </p>
     </main>
     <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
