feat: add tags to all html files

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,15 @@
         <title> Srinithi's Contact Information </title>
     </head>
   <body>
-    <nav> </nav>
+    <nav class="navbar"> 
+      <h1 class = "logo"></h1>
+    </nav>
     <main> 
+      <h1 class="Contact"> Contact Information </h1> 
     <p> Below is my contact information: </p>
      <p> <strong> Phone: </strong> 9259676996 </p>
      <p> <strong> Email: </strong> d.srinithi@gmail.com </p>
      </main>
-     <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
+     <footer class="footer"> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
