--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,12 @@
         <title> Srinithi's Personal Blog </title>
     </head>
   <body>
-    <nav> </nav>
-    <main> Welcome to my Blog! </main>
-    <footer> © 2023 Srinithi's Personal Website> | All Rights Reserved </footer>
+    <nav class="navbar">
+      <h1 class = "logo"></h1> 
+    </nav>
+    <main> Welcome to my Blog! 
+    <h1 class="blog"> Personal Blog </h1> 
+    </main>
+    <footer class="footer"> © 2023 Srinithi's Personal Website> | All Rights Reserved </footer>
   </body>
 </html>
