--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <title>Srinithi's Personal Website</title>
   </head>
   <body>
-    <nav></nav>
+    <nav class="navbar">
+      <h1 class = "logo"></h1>
+    </nav>
     <main>
-      <h1> Welcome </h1>
+      <h1 class="nostyle"> Welcome! </h1> 
+      <div class = "about"> 
+      <div class = "about-image"> </div>
+      <div class = "about-text">
       Hello World! My name is
       <strong> Srinithi Doddapaneni </strong> and I am a first year
       <em> Computer Science </em> major <br />
@@ -19,7 +24,9 @@
         I am excited for this opportunity with Hack4Impact and build projects to
         make a positive impact for nonprofits in SLO.
       </p>
+      </div>
+      </div>
     </main>
-    <footer>© 2023 Srinithi's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">© 2023 Srinithi's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
