--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,14 @@
         <title> Srinithi's Portfolio </title>
     </head>
   <body>
-    <nav> </nav>
+    <nav class="navbar">
+      <h1 class = "logo">  </h1>
+       </nav>
     <main> 
+      <h1 class = "portfolio"> My Portfolio </h1>
       Hello, welcome to my Portfolio!
+      
     </main>
-    <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
+    <footer class="footer"> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
