--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,11 @@
         <title> Srinithi's Resume </title>
     </head>
   <body>
-    <nav> </nav>
+    <nav class="navbar"> 
+      <h1 class = "logo"> </h1>
+    </nav>
      <main>
+      <h1 class = "resume"> My Resume </h1>
         Below is my resume. Conatact me if you have any questions or opportunities!
       <section></section>
       <section></section>
@@ -13,6 +16,6 @@
       <section></section>
       <section></section>
     </main>
-    <footer> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
+    <footer class="footer"> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
 </html>
