feat: add sections to resume.html

--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,23 @@
     </nav>
      <main>
       <h1 class = "resume"> My Resume </h1>
+      <div class = "resume"> 
         Below is my resume. Conatact me if you have any questions or opportunities!
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="section">
+        <h2 class = "Education"> Education </h2>
+      </section>
+      <section class="section">
+        <h2 class = "Experience"> Work Experience </h2>
+      </section>
+      <section class="section">
+        <h2 class = "Skills"> Skills </h2>
+      </section>
+      <section class="section">
+        <h2 class = "Coursework"> Coursework </h2>
+      </section>
+      <section class="section">
+        <h2 class = "Projects"> Projects </h2>
+      </section>
     </main>
     <footer class="footer"> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
   </body>
