feat: add div to portifolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
        </nav>
     <main> 
       <h1 class = "portfolio"> My Portfolio </h1>
+      <div class="project"> </div>
       Hello, welcome to my Portfolio!
       
     </main>
