feat: add link back to index.html

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,9 @@
     </head>
   <body>
     <nav class="navbar">
-      <h1 class = "logo"></h1> 
+      <h1 class = "logo">
+        <a href="index.html">Srinithi's Personal Website</a>
+      </h1> 
     </nav>
     <main> Welcome to my Blog! 
     <h1 class="blog"> Personal Blog </h1> 
