--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,9 @@
     </head>
   <body>
     <nav class="navbar"> 
-      <h1 class = "logo"> </h1>
+      <h1 class = "logo"> 
+        <a href="index.html">Srinithi's Personal Website</a>
+      </h1>
     </nav>
      <main>
       <h1 class = "resume"> My Resume </h1>
