--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,15 @@
         <title> Srinithi's Contact Information </title>
     </head>
   <body>
-    <nav class="navbar"> 
-      <h1 class = "logo">
-        <a href="index.html">Srinithi's Personal Website</a>
-      </h1>
+    <nav class="navbar">
+      <h1 class="logo"><a href="index.html">Srinithi's Personal Website</a></h1>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
     <main> 
       <h1 class="Contact"> Contact Information </h1> 
