feat: add picture

--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,9 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main> Welcome to my Blog! 
-    <h1 class="blog"> Personal Blog </h1> 
+    <main> 
+    <h2 class="blog"> Personal Blog </h2> 
+    Welcome to my Blog! 
     </main>
     <footer class="footer"> © 2023 Srinithi's Personal Website> | All Rights Reserved </footer>
   </body>
