--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <main>
       <h1 class="nostyle"> Welcome! </h1> 
       <div class = "about"> 
-      <div class = "about-image"> </div>
+      <div class = "about-image">
+        <img src="hi.jpg" alt="A description about git hub controls"
+       </div>
       <div class = "about-text">
       Hello World! My name is
       <strong> Srinithi Doddapaneni </strong> and I am a first year
