feat: add interactive contact.html

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,16 @@
     <main> 
       <h2 class="Contact"> Contact Information </h2> 
     <p> Below is my contact information: </p>
+    <form id="contact-form"> </form>
+     <input type="text" id="name" name="name" placeholder="Name" required />
+    <input type="email" id="email" name="email" placeholder="Email" />
+    <textarea
+          id="message"
+          name="message"
+          placeholder="Message"
+          required
+        ></textarea>
+    <input type="submit" value="Submit" />
      <p> <strong> Phone: </strong> 9259676996 </p>
      <p> <strong> Email: </strong> d.srinithi@gmail.com </p>
      </main>
