--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,20 @@
       </ul>
     </nav>
     <main> 
-      <h2 class = "portfolio"> My Portfolio </h2>
+      <h1 class = "portfolio"> My Portfolio </h1>
       <div class="project"> </div>
-      Hello, welcome to my Portfolio!
+      <a href="index.html">
+        <img src="hi.jpg" alt="Screenshot of Personal Website Home Page" width="400" />
+      </a>
+      <div class="project-details">
+        <p class="project-name">Personal Website</p>
+        <p class="project-description">
+          This is my personal website built with HTML and CSS. It showcases my projects, blog, and contact information.
+        </p>
+        <a href="index.html">Learn More</a>
+      </div>
+    </div>
+      
       
     </main>
     <footer class="footer"> © 2023 Srinithi's Personal Website | All Rights Reserved </footer>
