feat: final changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
     <head>  
         <title> Srinithi's Portfolio </title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
   <body>
     <nav class="navbar">
@@ -18,7 +19,7 @@
       <h1 class = "portfolio"> My Portfolio </h1>
       <div class="project"> </div>
       <a href="index.html">
-        <img src="hi.jpg" alt="Screenshot of Personal Website Home Page" width="400" />
+        <img src="website.jpg" alt="Screenshot of Personal Website Home Page" width="800" />
       </a>
       <div class="project-details">
         <p class="project-name">Personal Website</p>
