--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html>
     <head>  
         <title> Srinithi's Personal Blog </title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
   <body>
     <nav class="navbar">
