--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Srinithi's Personal Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
       <nav class="navbar">
@@ -18,7 +19,7 @@
       <h1 class="nostyle"> Welcome! </h1> 
       <div class = "about"> 
       <div class = "about-image">
-        <img src="hi.jpg" alt="A description about git hub controls"
+        <img src="IMG_3732.jpg" alt="photo of myself", width="300" />
        </div>
       <div class = "about-text">
       Hello World! My name is
@@ -27,8 +28,7 @@
       I'm from the Bay Area, specifically <em> San Ramon </em>. I love hiking,
       playing basketball for fun, spending time in nature, listening to music,
       playing chess, and solving puzzles. One fun fact about me is that I've
-      kept every single <br/>
-      letter written to me since 1st grade.
+      kept every single letter written to me since 1st grade.
       <p>
         I am excited for this opportunity with Hack4Impact and build projects to
         make a positive impact for nonprofits in SLO.
